# buggd

./: .gitignore  README.md  build_package.sh  hardware_test.py  led_test.py  pyproject.toml  sound_config.py
.github/workflows/: release.yml
apps/buggd/: utils.py
apps/modemctl/: main.py
apps/soundcardctl/: main.py
debian/: README.Debian  README.source  buggd-docs.docs  buggd.cron.d.ex  buggd.doc-base.ex  changelog  control  copyright  manpage.1.ex  manpage.md.ex  manpage.sgml.ex  manpage.xml.ex  postinst  postinst.ex  postrm.ex  preinst.ex  prerm  prerm.ex  rules  watch.ex
debian/upstream/: metadata.ex
docs/: index.html
docs/dists/bookworm/: Release
docs/dists/bookworm/main/binary-all/: Packages
docs/pool/main/b/buggd/: buggd_1.0.0-1_arm64.buildinfo  buggd_1.0.0-1_arm64.changes
hardware_drivers/: pcmd3180_i2c_init.sh  soundcard.py
pages/pool/main/b/buggd/: buggd_1.0.0-1_arm64.buildinfo
sensors/: I2SMic.py
src/bugg-recording/drivers/: modem.py
src/bugg_recording/apps/buggd/: factorytest.py  main.py  utils.py
src/bugg_recording/apps/modemctl/: main.py
src/bugg_recording/apps/soundcardctl/: main.py
src/bugg_recording/drivers/: leds.py  lock.py  modem.py  pcmd3180.py  soundcard.py  userled.py
src/bugg_recording/sensors/: I2SMic.py  __init__.py  externalmic.py  i2smic.py  options.py  sensorbase.py
src/buggd/apps/buggd/: debug.py  factorytest.py  log.py  main.py  utils.py
src/buggd/apps/soundcardctl/: main.py
src/buggd/drivers/: leds.py  lock.py  modem.py  pcmd3180.py  soundcard.py
src/buggd/sensors/: externalmic.py  i2smic.py
src/buggd/utility/: cpuserial
src/drivers/: soundcard.py
src/hardware_drivers/: soundcard.py
src/sensors/: I2SMic.py
tests/: filelock_test.py  singleton.py  singleton_test.py
