[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bugg_recording"
version = "0.1.0"
description = "Bugg userspace recording firmware, including the buggd daemon and various configuration tools."
authors = [
    { name = "Jeff Gough", email = "j@monad.is" },
    { name = "Sarab Sethi", email = "sarab.sethi@imperial.ac.uk" },
]
license = { file = "LICENSE" }
readme = "README.md"
dependencies = [
    "six",
    "google-cloud-storage",
    "RPi.GPIO",
    "pcf8574",
    "spidev",
    "systemd-python",
    "filelock",
    "pyusb",
    "pyserial",
    "smbus2",
]

[project.scripts]
buggd = "bugg_recording.apps.buggd.main:main"
modemctl = "bugg_recording.apps.modemctl.main:main"
soundcardctl = "bugg_recording.apps.soundcardctl.main:main"