[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "buggd"
version = "1.9.4"
description = "Bugg userspace recording firmware; including hardware drivers, the buggd daemon and various configuration tools."
authors = [
    { name = "Jeff Gough", email = "j@monad.is" },
    { name = "Sarab Sethi", email = "sarab.sethi@imperial.ac.uk" },
]
license = { file = "LICENSE" }
readme = "README.md"
dependencies = [
    "six",
    "google-cloud-storage",
    "RPi.GPIO",
    "pcf8574",
    "spidev",
    "filelock",
    "pyusb",
    "pyserial",
    "smbus2",
    "requests",
    "numpy",
    "scipy",
]

[project.scripts]
buggd = "buggd.apps.buggd.main:main"
modemctl = "buggd.apps.modemctl.main:main"
soundcardctl = "buggd.apps.soundcardctl.main:main"